<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.game.bing.starwar.StartActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/title_starwar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/stalinist_one"
            android:lineSpacingExtra="12sp"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:textColor="#bcffffff"
            android:textSize="50sp"
            android:textStyle="bold"
            android:typeface="normal" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/StartButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:fontFamily="sans-serif"
            android:onClick="onClick"
            android:text="@string/gameStart"
            android:textSize="18sp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/OptionButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:onClick="onClick"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:text="@string/option"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/HelpButton"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/help"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AboutButton"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/about"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
